<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_loginBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="@+id/tv_login"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="3"
        android:text="Faça o login com seu email e senha de acesso"
        android:textColor="@color/colorLight"
        android:textSize="@dimen/textMediumSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_login" />

    <EditText
        android:id="@+id/ed_loginEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/ed_selector"
        android:gravity="start|center"
        android:hint="@string/ed_loginEmail"
        android:textAllCaps="true"
        android:textSize="@dimen/textSmallSize"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/ed_loginSenha"
        app:layout_constraintEnd_toEndOf="@+id/ed_loginSenha"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/ed_loginSenha"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/tv_login_emailError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTinySize"
        android:text="@string/tv_login_emailError"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSmallSize"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ed_loginEmail" />

    <EditText
        android:id="@+id/ed_loginSenha"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/ed_selector"
        android:gravity="start|center"
        android:hint="@string/ed_loginSenha"
        android:textAllCaps="true"
        android:textSize="@dimen/textSmallSize"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/bt_Login"
        app:layout_constraintEnd_toEndOf="@+id/bt_Login"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/bt_Login"
        app:layout_constraintTop_toBottomOf="@+id/ed_loginEmail" />

    <TextView
        android:id="@+id/tv_login_senhaError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTinySize"
        android:text="@string/tv_login_passwordError"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSmallSize"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ed_loginSenha" />

    <Button
        android:id="@+id/bt_Login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/bt_login_selector"
        android:text="@string/bt_Login"
        android:textColor="@color/colorLight"
        android:textSize="@dimen/textSmallSize"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ed_loginSenha" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>